decal-macros/tests/ui/fail/expr_match_missing_comma.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Root(64.0, 64.0) {
            match 1 {
                0 => Text("zero")
                1 => Text("one"),
            }
        }
    };
}
