decal-macros/tests/ui/fail/expr_match_missing_comma.stderr
error: expected `,`
 --> tests/ui/fail/expr_match_missing_comma.rs:8:17
  |
8 |                 1 => Text("one"),
  |                 ^
